# verzik-sdk

./: .gitattributes  .gitignore
core_rust/: Cargo.toml
core_rust/src/: encrypt.rs  generate_tenant_id.rs  keccak_hash.rs  lib.rs  re_wrap.rs  stream.rs
ts_wrapper/: .env  .npmignore  README.md  package-lock.json  package.json  test.js  tsconfig.json
ts_wrapper/docs/: SDK_REFERENCE.md
ts_wrapper/src/: contract-errors.ts  encrypt.ts  identity.ts  index.ts  re_wrap.ts  sign.ts  types.ts  utils.ts
ts_wrapper/src/abi/: VoucherProtocolModule#CoSignLib.json  VoucherProtocolModule#DocumentLib.json  VoucherProtocolModule#OperatorLib.json  VoucherProtocolModule#RecoveryLib.json  VoucherProtocolModule#VoucherProtocol.json  VoucherProtocolModule#VoucherProtocolReader.json
ts_wrapper/src/blockchain/: blockchain.client.ts  blockchain.context.ts  blockchain.direct-query.ts  blockchain.graph-query.ts  blockchain.set-client.ts  blockchain.sign-client.ts
ts_wrapper/src/config/: blockchain.config.ts
ts_wrapper/src/types/: blockchain.types.ts  graph.types.ts
ts_wrapper/test/: check-test.js  demo_sign.ts  encrypt.test.ts  server.js  server_payload.json  test_blockchain.js  test_decrypt.js  test_encrypt.js  test_torus.js  test_upload_v2.js  test_wallet.js
ts_wrapper/test/sign-ui/: app.js  index.html  server.js
