[package]
name = "verzik-sdk"
version = "0.1.0"
edition = "2024" 

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ecies = { version = "0.2", default-features = false, features = ["pure"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
hex = "0.4" 
aes-gcm = { version = "0.10", features = ["stream"] }
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
critical-section = { version = "1.1", features = ["std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
wasm-bindgen-test = "0.3"